# Panda

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.txt  board.rs  datagen.typ  eval.rs  magic.rs  main.rs  makefile  move.rs  movegen.rs  perft.rs  release_note.md  search.rs  set-backtracking-003.txt
.github/workflows/: makefile.yml
ideas/: main.aux  main.fdb_latexmk  main.fls  main.tex
src/: bench.rs  board.rs  datagen.rs  db.rs  eval.rs  helper.rs  magic.rs  main.rs  move.rs  movegen.rs  nmm.rs  nnue.rs  ordering.rs  perft.rs  rng.rs  search.rs  search_macros.rs  search_tables.rs  thread.rs  transposition.rs  tuner.rs  types.rs  uci.rs  uncertainty.rs  zobrist.rs
src/board/: magic.rs  mod.rs  move.rs  movegen.rs  perft.rs  zobrist.rs
src/eval/: mod.rs  nnue.rs
src/search/: macros.rs  mod.rs  ordering.rs  search_stats.rs  tables.rs  thread.rs  transposition.rs
src/src/: board.rs  datagen.rs  helper.rs  main.rs  nnue.rs
src/util/: bench.rs  datagen.rs  helper.rs  mod.rs  types.rs  uci.rs
